# pyramid_example

./: .gitignore  .gitignore.in  MANIFEST.in  README.rst  black.toml  constraints.txt  development.ini  pyproject.toml  setup.cfg  tox.ini
alembic/: env.py
alembic/versions/: 20201212_dab6dc0c1994_initial.py
example_app/: __init__.py  db_schemata.py  interfaces.py  openapi.py  openapi.yaml  renderers.py  routes.py  security.py  typing.py  views.py
example_app/commands/: account_command.py  post_command.py
example_app/connectors/: db_readonly.py  db_readwrite.py
example_app/contexts/: actor.py  logger_adapter.py  timestamp.py
example_app/queries/: post_query.py
example_app/resources/: __init__.py  accounts.py  base.py  fallback.py  posts.py
tests/: conftest.py  factories.py  test_commands.py  test_contexts.py  test_db_schemata.py  test_functional.py  test_openapi.py  test_queries.py
