[build-system]
requires = [
  'setuptools==65.6.3',
  'wheel==0.38.4',
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 119
target-version = [
  'py310',
  'py311',
]
exclude = '''
/(
    \.env
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
