[metadata]
name = example_app
version = 0.1.dev0
platform = any
long_description = file:README.rst
long_description_content_type = text/x-rst

[options]
include_package_data = true
install_requires =
  openapi-core
  pymysql
  pyramid
  pyramid-openapi3
  pyramid-services
  pyramid-tm
  sqlalchemy
  transaction
  zope.sqlalchemy
  zope.interface
packages = find:
python_requires = >=3.8

[options.extras_require]
alembic =
  alembic
develop =
  alembic
  black==21.7b0
  check-manifest
  coverage
  factory-boy
  flake8
  lingua
  mypy
  mypy-zope
  paste
  pastedeploy
  pyramid-debugtoolbar
  pyramid-ipython
  pytest
  pytest-randomly
  readme-renderer[md]
  schemathesis
  sqlalchemy-stubs
  tox
  twine
  waitress
  webtest
testing =
  factory-boy
  pytest
  pytest-randomly
  schemathesis
  webtest
web =
  paste
  pastedeploy
  waitress

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
  PKG-INFO
  *.egg-info
  *.egg-info/*
ignore-bad-ideas =
  *.mo

[coverage:run]
source =
  example_app
  tests

[flake8]
ignore =
  # E203: whitespace before ':' (black fails to be PEP8 compliant)
  E203
;  # E731: do not assign a lambda expression, use a def
;  E731
  # W503: line break before binary operator (flake8 is not PEP8 compliant)
  W503
;  # W504: line break after binary operator (flake8 is not PEP8 compliant)
;  W504
exclude =
  .env
  .tox
  .venv
  build
  dist
show-source = True

[mypy]
plugins = sqlmypy, mypy_zope:plugin

[mypy-openapi_core.*,pyramid.*,transaction.*,zope.sqlalchemy.*]
ignore_missing_imports = true
